Consolidate scripts into one script